deployment/sof-app01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sof-app01
  namespace: sof-app01
  labels:
    app: sof-app01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sof-app01
  template:
    metadata:
      labels:
        app: sof-app01
    spec:
      containers:
        - name: sof-app01
          image: dimitardd/dimitar-app02:4d8f5c0aba5f446b4822a1b79c561c3e18850cba
          ports:
            - containerPort: 3000
