deployment/sof-app01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sof-app01-ingress
  namespace: sof-app01
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sof-app01.pt.playtech.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sof-app01-service
            port:
              number: 3000
  tls:
    - hosts:
        - sof-app01.pt.playtech.corp
      secretName: sof-app01-tls
